// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckablePanel is rendered 1`] = `
<div
  class="euiPanel euiCheckablePanel testClass1 testClass2"
>
  <div
    class="euiCheckablePanel__row"
  >
    <div
      class="euiCheckablePanel__control"
    >
      <div>
        <div
          aria-label="aria-label"
          class="euiRadio euiRadio--noLabel"
          data-test-subj="test subject string"
        >
          <input
            class="euiRadio__input"
            id="id"
            type="radio"
          />
          <div
            class="euiRadio__circle"
          />
        </div>
      </div>
    </div>
    <div
      class="euiCheckablePanel__label"
    >
      <label
        class="euiFormLabel"
        for="id"
      >
        <div
          class="euiText euiText--medium"
        >
          Label
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`EuiCheckablePanel renders a checkbox when specified 1`] = `
<div
  class="euiPanel euiCheckablePanel testClass1 testClass2"
>
  <div
    class="euiCheckablePanel__row"
  >
    <div
      class="euiCheckablePanel__control"
    >
      <div>
        <div
          class="euiCheckbox euiCheckbox--noLabel"
        >
          <input
            aria-label="aria-label"
            class="euiCheckbox__input"
            data-test-subj="test subject string"
            id="id"
            type="checkbox"
          />
          <div
            class="euiCheckbox__square"
          />
        </div>
      </div>
    </div>
    <div
      class="euiCheckablePanel__label"
    >
      <label
        class="euiFormLabel"
        for="id"
      >
        <div
          class="euiText euiText--medium"
        >
          Label
        </div>
      </label>
    </div>
  </div>
</div>
`;
